--- a/1mdm Webpage/webpage/package.json
+++ b/1mdm Webpage/webpage/package.json
@@ -7,6 +7,7 @@
     "flowbite": "^2.5.2",
     "flowbite-react": "^0.10.2",
     "react": "^19.0.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1"
   },
