--- a/1mdm Webpage/webpage/package.json
+++ b/1mdm Webpage/webpage/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "dependencies": {
     "cra-template": "1.2.0",
-    "flowbite": "^2.5.2",
     "flowbite-react": "^0.10.2",
     "react": "^19.0.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-scripts": "5.0.1"
   },
   "scripts": {
@@ -36,6 +36,8 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
     "web-vitals": "^4.2.4"
   }
